= Changelog

== Unreleased

== v1.1.26 - 2022-09-22 [[v1.1.26]]

* jar signing on

https://github.com/lread/muckabout/compare/Release-1.1.25\...Release-1.1.26[commit log]

== v1.1.25 - 2022-09-22 [[v1.1.25]]

* jar signing off

https://github.com/lread/muckabout/compare/Release-1.1.24\...Release-1.1.25[commit log]

== v1.1.24 - 2022-09-22 [[v1.1.24]]

* project corrections

https://github.com/lread/muckabout/compare/Release-1.1.23\...Release-1.1.24[commit log]

== v1.1.23 - 2022-09-22 [[v1.1.23]]

* my my

https://github.com/lread/muckabout/compare/Release-1.1.22\...Release-1.1.23[commit log]

== v1.1.22 - 2022-09-22 [[v1.1.22]]

* try this, try that

https://github.com/lread/muckabout/compare/Release-1.1.21\...Release-1.1.22[commit log]

== v1.1.21 - 2022-09-22 [[v1.1.21]]

* more more more

https://github.com/lread/muckabout/compare/Release-1.1.20\...Release-1.1.21[commit log]

== v1.1.20 [minor breaking] - 2022-09-22 [[v1.1.20]]

* more breaks

https://github.com/lread/muckabout/compare/Release-1.1.19\...Release-1.1.20[commit log]

== v1.1.19 [breaking] - 2022-09-22 [[v1.1.19]]

* breaking typo

https://github.com/lread/muckabout/compare/Release-1.1.18\...Release-1.1.19[commit log]

== v1.1.18 - 2022-09-22 [[v1.1.18]]

* more publish script updates

https://github.com/lread/muckabout/compare/Release-1.1.17\...Release-1.1.18[commit log]

== v1.1.17 - 2022-09-22 [[v1.1.17]]

* publish script updates

https://github.com/lread/muckabout/compare/Release-1.0.8\...Release-1.1.17[commit log]

== v1.1.16 - 2022-09-22 [[v1.1.16]]

* yaml


https://github.com/lread/muckabout/compare/Release-1.0.8\...Release-1.1.16[commit log]

== v1.1.15 - 2022-09-22 [[v1.1.15]]

* yaml


https://github.com/lread/muckabout/compare/Release-1.0.8\...Release-1.1.15[commit log]

== v1.1.14 - 2022-09-22 [[v1.1.14]]

* yaml

https://github.com/lread/muckabout/compare/Release-1.0.8\...Release-1.1.14[commit log]

== v1.1.13 - 2022-09-22 [[v1.1.13]]

* hey ya

