@@ -1,15 +1,0 @@
-name: release
-on:
-  workflow_dispatch:
-
-jobs:
-  test:
-    uses: ./.github/workflows/tests.yml
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [test]
-
-    steps:
-    - name: Pretend we are releasing
-      run: echo Releasing
