@@ -1,20 +1,0 @@
-name: tests
-on:
-  workflow_call:
-  push:
-    branches:
-      - main
-  pull_request:
-
-jobs:
-  test1:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Pretend we are testing
-      run: echo testing123
-
-  test2:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Present we are testing2
-      run: echo testing456
