@@ -7,15 +7,12 @@
          :enter (let [{:keys [name]} (current-task)] (status/line :head "TASK %s %s" name (string/join " " *command-line-args*)))
          :leave (let [{:keys [name]} (current-task)] (status/line :detail "\nTASK %s done." name))
          ;; tasks
-         publish {:doc "Publish a release"
-                  :task publish/-main}
-         ;; TODO: some attributes are shared with publish
-         -ci-github-release {:doc "(run by circleci) Create a github release"
-                             ;; PROJECT_VERSION comes from slipset's deploy maybe wrapper...
-                             :task (let [version (System/getenv "PROJECT_VERSION")
-                                         tag (System/getenv "CIRCLE_TAG")
-                                         named-version (str "v" version)]
-                                    (shell "gh release create"
-                                           tag
-                                           "--title" named-version
-                                           "--notes" (format "[change log](/changelog.adoc#%s)" named-version)))}}}
+         publish
+         {:doc "Publish a release"
+          :task publish/-main}
+         -ci-clojars-deploy
+         {:doc "triggered on ci by release tag"
+          :task ci-publish/clojars-deploy}
+         -ci-github-create-release
+         {:doc "triggered on ci by release tag"
+          :task ci-publish/github-create-release}}}
